RESOLVED FIXED265200
InteractionRegions: guards should not interfere with other regions
https://bugs.webkit.org/show_bug.cgi?id=265200
Summary InteractionRegions: guards should not interfere with other regions
Etienne
Reported 2023-11-21 09:10:03 PST
InteractionRegions: guards should not interfere with other regions
Attachments
Etienne
Comment 1 2023-11-21 09:29:29 PST
Etienne
Comment 2 2023-11-21 09:30:04 PST
EWS
Comment 3 2023-11-29 04:05:18 PST
Committed 271269@main (3991417995d3): <https://commits.webkit.org/271269@main> Reviewed commits have been landed. Closing PR #20792 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.